[package]
name = "prime-checker"
version = "0.2.19"
edition = "2021"
rust-version = "1.69.0"
authors = [
    "Arkiralor <prithoo11335@gmail.com>"
]
description = "Rust library crate to hold sample functions to check the prime-ness of a given unsigned, 64-bit integer."
repository = "https://github.com/Arkiralor/PrimeChecker/"
readme = "README.md"
license-file = "LICENSE.md"
keywords = ["library", "sample", "prime-numbers"]
publish = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"